.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moog-svc
spec:
  selector:
    app: moog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
